--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -13,7 +13,7 @@
 }
 
 .navbar-brand img {
-  height: 80px; /* Adjust the height of the logo */
+  max-height: 60px; /* Adjust the maximum height of the logo */
 }
 
 .nav-item {
