--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -9,7 +9,7 @@
 }
 
 .navbar-brand {
-  margin-left: 60px;
+  margin-left: 70px;
 }
 
 .navbar-brand img {
@@ -18,7 +18,7 @@
 
 .nav-item {
   margin-right: 50px;
-  font-weight: bold; /* Add more margin between navbar items */
+  font-weight: bolder; /* Add more margin between navbar items */
 }
 
 /* Optional: Add margin to the right of the last navbar item to avoid spacing after it */
@@ -37,10 +37,30 @@ social-icons {
 }
 
 .social-icons a {
-  margin-right: 25px; /* Increase the gap between social media icons */
+  margin-right: 40px; /* Increase the gap between social media icons */
   color: #2a3a91; /* Change the color of the icons */
 }
 
 .social-icons a i {
-  font-size: 24px; /* Adjust the size of the icons */
+  font-size: 30px; /* Adjust the size of the icons */
+}
+
+.dropdown-menu {
+  min-width: 200px; /* Adjust the width as needed */
+  animation: fadeInDown 0.5s ease; /* Add animation */
+}
+
+.dropdown-menu a {
+  padding: 10px 20px; /* Adjust padding as needed */
+}
+
+@keyframes fadeInDown {
+  from {
+    opacity: 0;
+    transform: translateY(-10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
