--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -64,3 +64,7 @@ social-icons {
     transform: translateY(0);
   }
 }
+
+.dropdown-menu .dropdown-item:hover {
+  color: #2a3a91; /* Change text color on hover */
+}
