--- a/src/components/About-Us/About.css
+++ b/src/components/About-Us/About.css
@@ -3,6 +3,13 @@
   color: rgb(118, 118, 127); /* text color */
   font-family: "Poppins", sans-serif; /* font family */
 }
+.about-us-heading {
+  font-family: "Poppins", sans-serif; /* Ensure the font family is correct */
+  font-weight: 800; /* Make the text very bold */
+  font-size: 3rem; /* Make the text size larger */
+  color: #000000; /* Optional: Set the text color */
+  margin: 0; /* Optional: Remove default margin */
+}
 
 .image-line-wrapper {
   display: flex;
