--- a/src/components/Quote/Quote.css
+++ b/src/components/Quote/Quote.css
@@ -18,25 +18,25 @@
 
 .quote-text {
   font-family: "Poppins", sans-serif; /* Font family */
-  font-size: 1.2rem; /* Font size */
-  font-weight: 400; /* Font weight */
+  font-size: 28px; /* Font size */
+  font-weight: 300; /* Font weight */
+  font-style: italic; /* Italic style */
   margin: 0; /* Remove default margin */
   color: white; /* Text color */
 }
 
-.quote-icon-left,
-.quote-icon-right {
-  font-size: 2rem; /* Font size of the quote icons */
-  color: #f7a721; /* Color of the quote icons */
-  margin: 0 10px; /* Margin around the quote icons */
-}
-
 .quote-icon-left {
   position: absolute;
-  left: -30px; /* Adjust position to the left */
+  top: -10px; /* Adjust position to the top left */
+  left: -20px; /* Adjust position to the left */
+  font-size: 3rem; /* Set a larger font size for the icons */
+  color: #f7a721; /* Color of the quote icons */
 }
 
 .quote-icon-right {
   position: absolute;
-  right: -30px; /* Adjust position to the right */
+  bottom: -50px; /* Adjust position to the bottom right */
+  right: -20px; /* Adjust position to the right */
+  font-size: 3rem; /* Set a larger font size for the icons */
+  color: #f7a721; /* Color of the quote icons */
 }
