--- a/src/components/Speciality/Speciality.css
+++ b/src/components/Speciality/Speciality.css
@@ -20,7 +20,7 @@ h3 {
   color: #2b3991; /* RGB(43, 57, 145) */
   font-family: "Poppins", sans-serif;
   font-size: 24px;
-  font-weight: bolder;
+  font-weight: 900;
   font-style: normal;
   font-variant: normal;
   font-kerning: auto;
