--- a/src/components/Logo-Vid/Logo.css
+++ b/src/components/Logo-Vid/Logo.css
@@ -1,6 +1,13 @@
 .logo-animation-container {
-  width: 100vw;
-  height: 100vh;
+  position: relative; /* Allows positioning of the controls */
+  width: 100%;
+  height: 100vh; /* Full viewport height */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden; /* Prevents overflow */
+  margin: 0; /* Removes default margins */
+  padding: 0; /* Removes default padding */
 }
 
 .logo-animation-video {
