Objective section changes done

--- a/src/components/Objective/Objective.css
+++ b/src/components/Objective/Objective.css
@@ -24,24 +24,29 @@
   padding: 20px;
 }
 
-p {
-  color: white;
+.objective-section .overlay p,
+.what-we-do-section .overlay ul,
+.what-we-do-section .overlay li {
+  color: white; /* Ensures all text inside the overlay is white */
 }
 
 h2 {
   color: #fca311;
 }
 
-ul {
+.objective-section ul,
+.what-we-do-section ul {
   list-style: none;
   padding: 0;
 }
 
-ul li {
+.objective-section ul li,
+.what-we-do-section ul li {
   margin-bottom: 10px;
 }
 
-ul li:before {
+.objective-section ul li:before,
+.what-we-do-section ul li:before {
   content: "•";
   color: #fca311;
   padding-right: 10px;
