--- a/src/components/About-Us/About.css
+++ b/src/components/About-Us/About.css
@@ -3,6 +3,7 @@
   color: rgb(118, 118, 127); /* text color */
   font-family: "Poppins", sans-serif; /* font family */
 }
+
 .about-us-heading {
   font-family: "Poppins", sans-serif; /* Ensure the font family is correct */
   font-weight: 800; /* Make the text very bold */
@@ -27,6 +28,7 @@
 .img-fluid {
   margin-bottom: 20px;
   max-width: 100%; /* Ensures the image is responsive */
+  height: auto; /* Maintains the aspect ratio of the image */
 }
 
 .about-us-container h2 {
