--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -14,6 +14,7 @@
 
 .footer {
   margin-top: 20px;
+  position: relative;
 }
 
 .container {
@@ -38,4 +39,60 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.scroll-to-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #2b3991;
+  color: white;
+  padding: 10px;
+  border-radius: 50%;
+  cursor: pointer;
+  animation: bounce 2s infinite;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.scroll-to-top:hover {
+  opacity: 0.8;
+}
+
+@keyframes bounce {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-10px);
+  }
+  60% {
+    transform: translateY(-5px);
+  }
+}
+
+.scroll-to-top svg {
+  width: 24px;
+  height: 24px;
+}
+
+.scroll-to-top p {
+  margin: 0;
+  padding: 5px 0 0 0;
+  font-size: 12px;
+  color: white;
+}
+
+.scroll-to-top-text {
+  position: fixed;
+  bottom: 35px; /* Adjust as needed */
+  right: 35px; /* Adjust as needed */
+  color: white;
+  font-size: 12px;
+  text-align: center;
 }
