--- a/src/components/Empower/Empower.css
+++ b/src/components/Empower/Empower.css
@@ -1,18 +1,19 @@
-h1 {
-  font-weight: 900;
-}
-
 .card {
-  background-color: #1a237e; /* Dark blue background */
+  background-color: #2b3991; /* Dark blue background */
   color: white; /* White text */
   border: none; /* Remove border */
   border-radius: 15px; /* Rounded corners */
   margin-bottom: 20px; /* Space between cards */
 }
-
+.card :hover {
+  background-color: #243673;
+}
 .icon {
   font-size: 2rem; /* Icon size */
   color: #ffc107; /* Yellow color for icons */
+}
+.icon :hover {
+  transform-style: inherit;
 }
 
 .card-title {
@@ -22,10 +23,12 @@ h1 {
 
 .card-text {
   font-size: 1rem; /* Text size */
+  color: white;
+  align-items: center;
 }
 
 .divider {
-  border-top: 2px solid #ffc107; /* Yellow color for divider */
+  border-top: 2px solid #ffbf00; /* Yellow color for divider */
   width: 50%; /* Set width of divider */
   margin: 0.5rem auto; /* Center the divider */
 }
