--- a/src/components/Cards/CaregiverCard.css
+++ b/src/components/Cards/CaregiverCard.css
@@ -1,22 +1,27 @@
 /* src/components/CaregiverCard.css */
 
-.course-header {
-  text-align: center; /* Center align the header */
-}
-
-.card-header {
-  color: white;
-  background-color: #243673;
-}
-
 .card-head {
   color: white;
 }
+.course-header {
+  text-align: center; /* Center align the header */
+  margin-bottom: 2rem; /* Add margin at the bottom for spacing */
+}
+
+.caregiver-cards-container {
+  padding: 2rem 0; /* Add padding to the container */
+}
+
+.cards-wrapper {
+  display: flex;
+  justify-content: center;
+  gap: 1rem; /* Adjust gap between cards */
+}
 
 .caregiver-card {
-  max-width: 400px;
-  margin: 0 auto;
-  border: none;
+  max-width: 450px; /* Increase the max-width for wider cards */
+  width: 100%; /* Ensure the card takes full width up to the max-width */
+  height: 400px;
   text-align: center;
 }
 
@@ -26,6 +31,7 @@
   flex-direction: column;
   align-items: center;
   background-color: #243673 !important; /* Match background color to the first card */
+  color: white;
 }
 
 .caregiver-card .icon-container {
@@ -52,7 +58,7 @@
 
 .caregiver-card .image-container img {
   width: 100%;
-  height: 100%;
+  height: auto; /* Ensure the image maintains its aspect ratio */
 }
 
 .caregiver-card .image-container .btn {
