--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -29,6 +29,7 @@
   margin-right: 1rem; /* Add margin on the right to create horizontal gap */
   border-radius: 15px; /* Make the tab corners round */
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Add a slight shadow for better visual separation */
+  position: relative; /* Position relative for absolute positioning of icon */
 }
 
 .caregiver-tab:last-child {
@@ -44,7 +45,7 @@
   color: white;
   border-top-left-radius: 15px; /* Round the top-left corner */
   border-top-right-radius: 15px; /* Round the top-right corner */
-  padding: 2rem 0; /* Increase padding for better spacing */
+  padding: 2rem 0 3.5rem; /* Increase padding to make space for the icon */
   position: relative; /* Position relative for absolute positioning of icon */
 }
 
@@ -73,7 +74,6 @@
   overflow: hidden; /* Hide overflow to maintain fixed height */
   border-bottom-left-radius: 15px; /* Round the bottom-left corner */
   border-bottom-right-radius: 15px; /* Round the bottom-right corner */
-  margin-top: 35px; /* Add margin to accommodate the icon */
 }
 
 .caregiver-tab .image-container img {
