--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -29,7 +29,6 @@
   margin-right: 1rem; /* Add margin on the right to create horizontal gap */
   border-radius: 15px; /* Make the tab corners round */
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Add a slight shadow for better visual separation */
-  position: relative; /* Position relative for absolute positioning of icon */
 }
 
 .caregiver-tab:last-child {
@@ -41,12 +40,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #243673; /* Match background color to the first tab */
+  background-color: #2b3991; /* Match background color to the first tab */
   color: white;
   border-top-left-radius: 15px; /* Round the top-left corner */
   border-top-right-radius: 15px; /* Round the top-right corner */
-  padding: 2rem 0 3.5rem; /* Increase padding to make space for the icon */
-  position: relative; /* Position relative for absolute positioning of icon */
+  padding: 1rem 0; /* Add padding for better spacing */
 }
 
 .caregiver-tab .icon-container {
@@ -57,9 +55,12 @@
   border-radius: 50%;
   width: 70px; /* Increase width for larger tabs */
   height: 70px; /* Increase height for larger tabs */
-  border: 5px solid white; /* Add white border */
-  position: absolute;
-  bottom: -35px; /* Position icon in the middle of the header and image */
+  margin-top: 10px; /* Add some margin to position the icon */
+  box-shadow: 0 0 0 5px white; /* Add white border around the icon */
+}
+
+.caregiver-tab .icon-container:hover {
+  animation: float 0.5s ease-in-out infinite; /* Apply float animation on hover */
 }
 
 .caregiver-tab .icon-container i {
@@ -87,11 +88,10 @@
   bottom: 10px; /* Adjust to move the button upwards */
   left: 50%;
   transform: translateX(-50%);
-  background-color: #243673;
+  background-color: #2b3991;
   border: none;
   border-radius: 5px; /* Round the button corners */
   padding: 10px 20px; /* Adjust padding as needed */
-  color: white; /* Set text color to white */
 }
 
 @keyframes float {
