--- a/src/components/Scroll/Scroll.css
+++ b/src/components/Scroll/Scroll.css
@@ -58,7 +58,18 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   margin: 10px 0;
   border: 1px solid #ddd;
-  font-family: Arial, sans-serif;
+  font-family: Poppins;
+}
+.scrolling .app {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.scrolling .skill {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .timeline-content h4 {
