--- a/src/components/Alumni/one.css
+++ b/src/components/Alumni/one.css
@@ -1,5 +1,18 @@
 .image-container {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between; /* Adjust as needed */
+  margin-top: 20px; /* Adjust margin as needed */
+}
+
+.image-wrapper {
+  width: 25%; /* Set width to display four images per row */
+  text-align: center;
+  margin-bottom: 20px; /* Adjust margin between rows */
+}
+
+.image-container {
+  display: flex;
   justify-content: space-between; /* Adjust as needed */
   align-items: center;
   margin-top: 20px; /* Adjust margin as needed */
