--- a/src/components/Alumni/one.css
+++ b/src/components/Alumni/one.css
@@ -30,3 +30,10 @@
   text-align: center;
   margin-top: 5px; /* Adjust as needed */
 }
+
+.one-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+}
