Alumni Section done

--- a/src/components/Alumni/one.css
+++ b/src/components/Alumni/one.css
@@ -1,17 +1,17 @@
-.image-container {
+.pic-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between; /* Adjust as needed */
   margin-top: 20px; /* Adjust margin as needed */
 }
 
-.image-wrapper {
+.pic-wrapper {
   width: 25%; /* Set width to display four images per row */
   text-align: center;
   margin-bottom: 20px; /* Adjust margin between rows */
 }
 
-.image-container {
+.pic-container {
   display: flex;
   justify-content: space-between; /* Adjust as needed */
   align-items: center;
