--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -1,11 +1,52 @@
-body {
-  background-color: #4747d7;
+.register {
+  background-color: #4a3aff;
+  padding: 20px;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .text-header {
+  font-size: 2em;
+  margin-bottom: 20px;
   color: white;
+}
+
+.register-form {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  max-width: 600px;
+}
+
+.register-form label {
+  margin-bottom: 15px;
+  font-size: 1em;
+}
+
+.register-form input,
+.register-form select,
+.register-form button {
+  width: 100%;
   padding: 10px;
+  margin-top: 5px;
+  border: none;
+  border-radius: 5px;
+  font-size: 1em;
+}
+
+.register-form input[type="file"] {
+  padding: 3px;
+}
+
+.register-form button {
+  background-color: #0000ff;
+  color: white;
+  cursor: pointer;
+  margin-top: 20px;
+}
+
+.register-form button:hover {
+  background-color: #0000cc;
 }
